test_outputs/connlist/exposure_test_with_anp_15_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed)
			AdminNetworkPolicy 'exposure-example-15' allows connections by Egress rule allow-tcp9090-to-all-pods-in-same-ns
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-9089,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			AdminNetworkPolicy 'exposure-example-15-b' denies connections by Egress rule deny-all-to-all-pods-in-same-ns
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			AdminNetworkPolicy 'exposure-example-15' allows connections by Ingress rule allow-tcp9090-from-pods-in-same-namespace

Denied connections:
	Denied TCP:[1-9089,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			AdminNetworkPolicy 'exposure-example-15-b' denies connections by Ingress rule deny-all-from-pods-in-same-namespace


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] 	=> 	hello-world/[all pods] : TCP 9090
hello-world/workload-a[Deployment] 	=> 	new-ns/[pod with {app=new-app}] : UDP 53,58
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] 	<= 	hello-world/[all pods] : TCP 9090
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-b[Deployment] is not protected on Ingress
